### 26-Apr-2021 - MDD - Version 10.3.2
    Fixed a bug introduced when the build manager reworked code to remove circular
    dependencies caused by the introduction of the acscteforwardmodel code.  The
    name of the executable was inadvertently changed from "acscteforwardmodel.e"
    to "acsforwardmodel.e".  The ACS team requested the name be changed back to
    the original as scripts and documentation are impacted.

###  07-Apr-2021 - MDD - Version 10.3.1
    Fixed a bug introduced when the build manager reworked code to
    remove circular dependencies caused by the introduction of the
    acscteforwardmodel code.  Resolved the segmentation fault when
    trying to execute the standalone executables "acscte.e" and
    "acsforwardmodel.e".

### 12-Feb-2021 - JH (Done during build creation for operations for 10.3.0)
    Build manager made changes to the main routines and wscript files (predominantly)
    to eliminate some circular dependency.

### 31-Dec-2020 - MDD - Version 10.3.0
    Implementation to use an image to detect and flag full-well
    saturation versus a simple scalar.  The new routine,
    dofwsat.c, is modelled on dobias.c. The detect/flagging
    occurs after bias correction, conversion to electrons, and
    blev correction.

### 24-Jun-2020 - MDD -- Version 10.2.4 
    Removed/modified/updated routines which used copyrighted code.
    Updates implemented Oct 2019, but installation delayed for higher 
    priority updates.

### 29-Apr-2020 - MDD -- Version 10.2.3 
    Modified "dodqi" to accommodate the A-to-D saturation threshold 
    which is now defined in the CCDTAB. The threshold is no longer 
    a constant and has different behavior pre- and post-SM4.
    This modification uses Updated CCDTAB files for HRC and WFC.

### 10-Jan-2020 - MDD -- Version 10.2.2
    Removed hard-coded darktime scaling value and read new post-flashed and
    unflashed columns from updated CCDTAB reference file to use for the