@@ -1,3 +1,9 @@
+### 03-May-2021 - MDD - Version 10.3.3
+    Fixed a bug associated with the FLASHDUR computation.  The FLASHDUR
+    keyword was updated in the CRJ/CRC headers to be the sum of
+    the individual input images as this keyword is used in ACS2D to
+    scale the flash reference file for flash correction.
+
 ### 26-Apr-2021 - MDD - Version 10.3.2
     Fixed a bug introduced when the build manager reworked code to remove circular
     dependencies caused by the introduction of the acscteforwardmodel code.  The
